# rusty-two-wheel

./: Cargo.toml  README.md  build.rs  jlink.gdb
.cargo/: config
data-analysis/: 200Hz-accel-gyro.txt
src/: main.rs  motor.rs  wheel.rs
