[package]
authors = ["Tim Boldt <tim.boldt@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rusty-two-wheel"
version = "0.1.0"

[dependencies]
# alloc-cortex-m = "0.3.5"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
nb = "0.1.2"
panic_rtt = "0.2.0"
jlink_rtt = "0.1.0"
# panic-halt = "0.2.0"
# panic-itm = "0.4.0"
# panic-semihosting = "0.5.2"

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "rusty-two-wheel"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
