[package]
authors = ["Tim Boldt <tim.boldt@gmail.com>", "Tim Boldt <tboldt@google.com>"]
edition = "2018"
readme = "README.md"
name = "rusty-two-wheel"
version = "0.2.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
embedded-hal = "0.2.3"
jlink_rtt = "0.1.0"
libm = "0.1.3"
madgwick = "0.1.1"
mpu9250-i2c = "0.6.6"
nb = "0.1.2"
panic_rtt = "0.2.0"
# The following is temporary until this crate is patched.
pid = { git = "https://github.com/braincore/pid-rs" }
pscontroller-rs = { git = "https://github.com/RandomInsano/pscontroller-rs" } 

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "rusty-two-wheel"
test = false
bench = false

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1 # better optimizations
#debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
